# Ticket-machine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
app/: main.cpp  server_main.cpp
include/: change_calculator.hpp  coin_inventory.hpp  console_client_app.hpp  models.hpp  network_protocol.hpp  paths.hpp  server_console_app.hpp  server_seed_data.hpp  ticket_machine_client.hpp  ticket_server.hpp  ticket_server_host.hpp
src/: change_calculator.cpp  coin_inventory.cpp  console_client_app.cpp  network_protocol.cpp  server_console_app.cpp  server_seed_data.cpp  ticket_machine_client.cpp  ticket_server.cpp  ticket_server_host.cpp
tests/: change_calculator_tests.cpp  coin_inventory_tests.cpp  server_seed_data_tests.cpp  ticket_server_concurrency_tests.cpp  ticket_server_tests.cpp
